orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Distribution_Request__c/Distribution_Request__c.object-meta.xml
<CustomObject>
    <description>Distribution/withdrawal requests with compliance tracking</description>
    <label>Distribution Request</label>
    <nameField>
        <displayFormat>DIST-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>