orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Distribution_Request__c/fields/Compliance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Notes__c</fullName>
    <label>Compliance Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>