orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Distribution_Request__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>ACH</fullName><default>true</default><label>ACH (2-3 days)</label></value>
            <value><fullName>Wire</fullName><default>false</default><label>Wire (same day, $25 fee)</label></value>
            <value><fullName>Check - Standard</fullName><default>false</default><label>Check - Standard Mail</label></value>
            <value><fullName>Check - Overnight</fullName><default>false</default><label>Check - Overnight ($30 fee)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>