orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Distribution_Request__c/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <label>Gross Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>