orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Distribution_Request__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <label>Household</label>
    <type>Lookup</type>
    <referenceTo>Client_Household__c</referenceTo>
    <relationshipLabel>Distribution Requests</relationshipLabel>
    <relationshipName>Distribution_Requests</relationshipName>
</CustomField>