orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Distribution_Request__c/fields/Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount__c</fullName>
    <label>Net Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>Gross_Amount__c * (1 - BLANKVALUE(Federal_Withholding__c, 0) - BLANKVALUE(State_Withholding__c, 0))</formula>
</CustomField>