orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Distribution_Request__c/fields/State_Withholding__c.field-meta.xml
<CustomField>
    <fullName>State_Withholding__c</fullName>
    <label>State Withholding %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>