orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Distribution_Request__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Standard</fullName><default>true</default><label>Standard</label></value>
            <value><fullName>Expedited</fullName><default>false</default><label>Expedited</label></value>
            <value><fullName>Emergency</fullName><default>false</default><label>Emergency (Mortality/Hardship)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>